# armake

./: .gitignore  CMakeLists.txt
lib/: ittnotify.h
src/: CMakeLists.txt  args.h  binarize.cpp  binarize.h  build.cpp  build.h  derapify.cpp  derapify.h  filesystem.cpp  filesystem.h  img2paa.cpp  ittnotify.h  keygen.cpp  keygen.h  lex.yy.cpp  logger.cpp  logger.h  main.cpp  material.cpp  material.h  matrix.cpp  matrix.h  model_config.cpp  model_config.h  p3d.cpp  p3d.h  paa2img.cpp  paaconverter.cpp  paaconverter.h  preprocess.cpp  preprocess.h  rapify.cpp  rapify.h  rapify.l  rapify.tab.cpp  rapify.tab.hpp  rapify.y  sign.cpp  sign.h  unpack.cpp  (+4 more)
